Name:          hopt-o-mex
Version:       0.1
License:       AllRightsReserved
--License-file:
Copyright:     (c) Greg Horn 2011,
Author:        Greg Horn
Maintainer:    gregmainland@gmail.com
Stability:     Experimental
Category:      Math
Build-type:    Simple
Cabal-version: >=1.2
--synopsis:      Optimal control stuff
--description:   TODO

Executable doubleCartpoleDdp
  Main-Is:         doubleCartpoleDdp.hs
  Hs-Source-Dirs:  .
  Other-Modules:
  Build-depends:   base, hcasadi, hmatrix, time, GLUT, containers, deepseq, unix
  Ghc-options:     -threaded -O2 -pgml g++ -dno-debug-output
--  Ghc-options:     -threaded -O2 -pgml g++ -dno-debug-output -auto-all -caf-all -fforce-recomp -rtsopts

  Extra-lib-dirs:  /home/greg/hcasadi/hcasadi_cppsrc, /home/greg/casadi/build/lib
  Extra-libraries: casadi_interface, casadi

--Executable springDdp
--  Main-Is:         springDdp.hs
--  Hs-Source-Dirs:  .
--  Other-Modules:
--  Build-depends:   base, hcasadi, gnuplot
--  Ghc-options: -pgml g++ -O2 -dno-debug-output
--
--  Extra-lib-dirs:  /home/greg/hcasadi/hcasadi_cppsrc, /home/greg/casadi/build/lib
--  Extra-libraries: casadi_interface, casadi

Executable cartpoleDdp
  Main-Is:         cartpoleDdp.hs
  Hs-Source-Dirs:  .
  Other-Modules:
  Build-depends:   base, hcasadi, GLUT, containers, deepseq, unix
  Ghc-options:     -threaded -O2 -pgml g++ -dno-debug-output
--  Ghc-options:     -threaded -O2 -pgml g++ -dno-debug-output -auto-all -caf-all -fforce-recomp -rtsopts

  Extra-lib-dirs:  /home/greg/hcasadi/hcasadi_cppsrc, /home/greg/casadi/build/lib
  Extra-libraries: casadi_interface, casadi

--Executable optTest
--  Main-Is:         optTest.hs
--  Hs-Source-Dirs:  .
--  Other-Modules:   Optimization
--  Build-depends:   base, hcasadi, hmatrix, gnuplot
--  Ghc-options:     -pgml g++ -dno-debug-output -O2
--
--  Extra-lib-dirs:  /home/greg/hcasadi/hcasadi_cppsrc, /home/greg/casadi/build/lib
--  Extra-libraries: casadi_interface, casadi

Executable cartpoleMs
  Main-Is:         cartpoleMs.hs
  Hs-Source-Dirs:  .
  Other-Modules:
  Build-depends:   base, hcasadi
  Ghc-options:     -threaded -pgml g++ -dno-debug-output -O2
--  Ghc-options:     -O2 -threaded -pgml g++ -dno-debug-output -auto-all -caf-all -fforce-recomp -rtsopts

  Extra-lib-dirs:
        /home/greg/hcasadi/hcasadi_cppsrc
        /home/greg/casadi/build/lib
        /usr/local/lib/coin
        /usr/local/lib/coin/ThirdParty
        /home/greg/snopt7/lib

  Extra-libraries:
        casadi_interface
        coinhsl
        coinmumps
        coinmetis
        ipopt
        ipopt_interface
        csparse_interface
        optimal_control
        superlu_interface
        casadi
        csparse
        gsl_interface
        lapack_interface
        superlu
        tinyxml
        snopt
        snopt_c
        snopt_cpp
        snprint
        snprint_c
        snoptblas
        snoptblas_c
        HSrtsmain
        f2c

Executable doubleCartpoleMs
  Main-Is:         doubleCartpoleMs.hs
  Hs-Source-Dirs:  .
  Other-Modules:
  Build-depends:   base, hcasadi
  Ghc-options:     -threaded -pgml g++ -dno-debug-output -O2
--  Ghc-options:     -O2 -threaded -pgml g++ -dno-debug-output -auto-all -caf-all -fforce-recomp -rtsopts

  Extra-lib-dirs:
        /home/greg/hcasadi/hcasadi_cppsrc
        /home/greg/casadi/build/lib
        /usr/local/lib/coin
        /usr/local/lib/coin/ThirdParty
        /home/greg/snopt7/lib

  Extra-libraries:
        casadi_interface
        coinhsl
        coinmumps
        coinmetis
        ipopt
        ipopt_interface
        csparse_interface
        optimal_control
        superlu_interface
        casadi
        csparse
        gsl_interface
        lapack_interface
        superlu
        tinyxml
        snopt
        snopt_c
        snopt_cpp
        snprint
        snprint_c
        snoptblas
        snoptblas_c
        HSrtsmain
        f2c
